Fix navbar on mobile view

--- a/docs/stylesheets/colors.css
+++ b/docs/stylesheets/colors.css
@@ -1,10 +1,19 @@
 :root {
     --md-primary-fg-color: #5836FF;
     --md-accent-fg-color: #DD241F;
+    --md-header-color--dark: #2c1849;
 }
 
 .md-header {
-    background-color: #2C1849;
+    background-color: var(--md-header-color--dark);
+}
+
+.md-nav__title {
+    --md-primary-fg-color: var(--md-header-color--dark);
+}
+
+.md-nav__source {
+    --md-primary-fg-color--dark: #1F1135;
 }
 
 .md-typeset .task-list-control [type="checkbox"]:checked + .task-list-indicator::before {
